# unfolder

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  rust-toolchain.toml
src/: cli.rs  errors.rs  file.rs  lib.rs  main.rs
tests/: test_flatten.rs
tests/fixtures/: deepmind.flow  labs-google.har
